unicast communication mode set as default

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -32,7 +32,7 @@
     "        self.command_msg = fr3_cmd()\n",
     "        self.user_callback = None\n",
     "        # Threading Interface for handleing LCM\n",
-    "        self.lc = lcm.LCM()\n",
+    "        self.lc = lcm.LCM(\"udpm://239.255.76.67:7667?ttl=1\")\n",
     "        self.subscription = self.lc.subscribe(self.state_topic_name, self.update)\n",
     "        self.subscription.set_queue_capacity(1)\n",
     "        self.running = True\n",
