--- a/draft.ipynb
+++ b/draft.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -97,39 +97,22 @@
     }
    ],
    "source": [
+    "from FR3Py.interfaces import FR3Real\n",
     "robot = FR3Real()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'q': array([ 1.56080920e-04, -7.83416164e-01,  5.42247825e-05, -2.35662164e+00,\n",
-       "        -4.52129523e-04,  1.56974264e+00,  7.85576644e-01,  0.00000000e+00,\n",
-       "         0.00000000e+00]),\n",
-       " 'dq': array([ 0.00035184,  0.00144607, -0.0004635 , -0.00127268,  0.00027632,\n",
-       "        -0.00075314, -0.00084794,  0.        ,  0.        ]),\n",
-       " 'T': array([-1.86634406e-01, -4.22522640e+00, -7.62312770e-01,  2.31327038e+01,\n",
-       "         9.41514015e-01,  2.43543196e+00,  9.06659663e-03,  0.00000000e+00,\n",
-       "         0.00000000e+00])}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.readStates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +122,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     sleep(\u001b[39m0.001\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     robot\u001b[39m.\u001b[39msetCommand(np\u001b[39m.\u001b[39mzeros(\u001b[39m7\u001b[39m))\n",
+      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     sleep(\u001b[39m0.001\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     robot\u001b[39m.\u001b[39msetCommand(np\u001b[39m.\u001b[39mzeros(\u001b[39m7\u001b[39m))\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -149,6 +132,13 @@
     "    sleep(0.001)\n",
     "    robot.setCommand(np.zeros(7))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
