Cartesian velocity interface is added

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -135,6 +135,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from FR3Py.control_utils import RobotModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RobotModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'q': array([0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " 'dq': array([0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " 'f(x)': array([[  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.        ],\n",
+       "        [  0.34254685],\n",
+       "        [ 16.63314448],\n",
+       "        [  5.39166406],\n",
+       "        [ 34.14270654],\n",
+       "        [ -7.33759847],\n",
+       "        [-44.0004016 ],\n",
+       "        [ -7.07874768],\n",
+       "        [  4.03622556],\n",
+       "        [ -4.03622556]]),\n",
+       " 'g(x)': array([[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 2.67834389e+01,  3.28644841e-02, -2.67723381e+01,\n",
+       "          6.13865865e-02, -1.05739838e-02, -4.01637578e-03,\n",
+       "          4.97372626e-03, -2.43215068e-03,  2.43215068e-03],\n",
+       "        [ 3.28644841e-02,  1.59581008e+00,  5.06158291e-01,\n",
+       "          2.98076589e+00, -5.13443931e-01, -1.95024298e-01,\n",
+       "          2.41510637e-01, -1.18098630e-01,  1.18098630e-01],\n",
+       "        [-2.67723381e+01,  5.06158291e-01,  4.98857078e+01,\n",
+       "          1.00887380e+00, -2.31512609e+01, -2.21720418e-02,\n",
+       "          4.09919352e-02, -3.51570560e-02,  3.51570560e-02],\n",
+       "        [ 6.13865865e-02,  2.98076589e+00,  1.00887380e+00,\n",
+       "          7.24923707e+00, -2.24196258e+00,  6.87704988e-01,\n",
+       "         -4.92844706e-01, -1.59587227e-01,  1.59587227e-01],\n",
+       "        [-1.05739838e-02, -5.13443931e-01, -2.31512609e+01,\n",
+       "         -2.24196258e+00,  5.44850970e+01, -8.96135271e-01,\n",
+       "          3.20439959e+01,  1.90145394e+00, -1.90145394e+00],\n",
+       "        [-4.01637578e-03, -1.95024298e-01, -2.21720418e-02,\n",
+       "          6.87704988e-01, -8.96135271e-01,  1.97675242e+01,\n",
+       "          2.80228142e+00, -2.18928794e+00,  2.18928794e+00],\n",
+       "        [ 4.97372626e-03,  2.41510637e-01,  4.09919352e-02,\n",
+       "         -4.92844706e-01,  3.20439959e+01,  2.80228142e+00,\n",
+       "          1.83237134e+02,  1.50159204e+00, -1.50159204e+00],\n",
+       "        [-2.43215068e-03, -1.18098630e-01, -3.51570560e-02,\n",
+       "         -1.59587227e-01,  1.90145394e+00, -2.18928794e+00,\n",
+       "          1.50159204e+00,  6.70586712e+01, -3.92004501e-01],\n",
+       "        [ 2.43215068e-03,  1.18098630e-01,  3.51570560e-02,\n",
+       "          1.59587227e-01, -1.90145394e+00,  2.18928794e+00,\n",
+       "         -1.50159204e+00, -3.92004501e-01,  6.70586712e+01]]),\n",
+       " 'M(q)': array([[ 1.21087270e-01, -5.76918553e-02,  8.37498215e-02,\n",
+       "          2.28216636e-02,  4.01578607e-02,  1.34910570e-03,\n",
+       "         -6.91262924e-03, -9.33380951e-04,  9.33380951e-04],\n",
+       "        [-5.76918553e-02,  2.85703459e+00, -5.69229192e-02,\n",
+       "         -1.18662706e+00, -4.52703877e-02,  6.86215671e-02,\n",
+       "         -1.68571373e-04,  5.67028928e-03, -5.67028928e-03],\n",
+       "        [ 8.37498215e-02, -5.69229192e-02,  8.37498215e-02,\n",
+       "          2.28216636e-02,  4.01578607e-02,  1.34910570e-03,\n",
+       "         -6.91262924e-03, -9.33380951e-04,  9.33380951e-04],\n",
+       "        [ 2.28216636e-02, -1.18662706e+00,  2.28216636e-02,\n",
+       "          6.33064034e-01,  2.44661512e-02, -3.30381679e-02,\n",
+       "         -4.74311654e-04, -2.31860314e-03,  2.31860314e-03],\n",
+       "        [ 4.01578607e-02, -4.52703877e-02,  4.01578607e-02,\n",
+       "          2.44661512e-02,  4.01578607e-02,  1.34910570e-03,\n",
+       "         -6.91262924e-03, -9.33380951e-04,  9.33380951e-04],\n",
+       "        [ 1.34910570e-03,  6.86215671e-02,  1.34910570e-03,\n",
+       "         -3.30381679e-02,  1.34910570e-03,  5.30439486e-02,\n",
+       "         -1.25553660e-03,  1.75433192e-03, -1.75433192e-03],\n",
+       "        [-6.91262924e-03, -1.68571373e-04, -6.91262924e-03,\n",
+       "         -4.74311654e-04, -6.91262924e-03, -1.25553660e-03,\n",
+       "          6.68615197e-03,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [-9.33380951e-04,  5.67028928e-03, -9.33380951e-04,\n",
+       "         -2.31860314e-03, -9.33380951e-04,  1.75433192e-03,\n",
+       "          0.00000000e+00,  1.50000000e-02,  0.00000000e+00],\n",
+       "        [ 9.33380951e-04, -5.67028928e-03,  9.33380951e-04,\n",
+       "          2.31860314e-03,  9.33380951e-04, -1.75433192e-03,\n",
+       "          0.00000000e+00,  0.00000000e+00,  1.50000000e-02]]),\n",
+       " 'M(q)^{-1}': array([[ 2.67834389e+01,  3.28644841e-02, -2.67723381e+01,\n",
+       "          6.13865865e-02, -1.05739838e-02, -4.01637578e-03,\n",
+       "          4.97372626e-03, -2.43215068e-03,  2.43215068e-03],\n",
+       "        [ 3.28644841e-02,  1.59581008e+00,  5.06158291e-01,\n",
+       "          2.98076589e+00, -5.13443931e-01, -1.95024298e-01,\n",
+       "          2.41510637e-01, -1.18098630e-01,  1.18098630e-01],\n",
+       "        [-2.67723381e+01,  5.06158291e-01,  4.98857078e+01,\n",
+       "          1.00887380e+00, -2.31512609e+01, -2.21720418e-02,\n",
+       "          4.09919352e-02, -3.51570560e-02,  3.51570560e-02],\n",
+       "        [ 6.13865865e-02,  2.98076589e+00,  1.00887380e+00,\n",
+       "          7.24923707e+00, -2.24196258e+00,  6.87704988e-01,\n",
+       "         -4.92844706e-01, -1.59587227e-01,  1.59587227e-01],\n",
+       "        [-1.05739838e-02, -5.13443931e-01, -2.31512609e+01,\n",
+       "         -2.24196258e+00,  5.44850970e+01, -8.96135271e-01,\n",
+       "          3.20439959e+01,  1.90145394e+00, -1.90145394e+00],\n",
+       "        [-4.01637578e-03, -1.95024298e-01, -2.21720418e-02,\n",
+       "          6.87704988e-01, -8.96135271e-01,  1.97675242e+01,\n",
+       "          2.80228142e+00, -2.18928794e+00,  2.18928794e+00],\n",
+       "        [ 4.97372626e-03,  2.41510637e-01,  4.09919352e-02,\n",
+       "         -4.92844706e-01,  3.20439959e+01,  2.80228142e+00,\n",
+       "          1.83237134e+02,  1.50159204e+00, -1.50159204e+00],\n",
+       "        [-2.43215068e-03, -1.18098630e-01, -3.51570560e-02,\n",
+       "         -1.59587227e-01,  1.90145394e+00, -2.18928794e+00,\n",
+       "          1.50159204e+00,  6.70586712e+01, -3.92004501e-01],\n",
+       "        [ 2.43215068e-03,  1.18098630e-01,  3.51570560e-02,\n",
+       "          1.59587227e-01, -1.90145394e+00,  2.18928794e+00,\n",
+       "         -1.50159204e+00, -3.92004501e-01,  6.70586712e+01]]),\n",
+       " 'nle': array([ 0.00000000e+00, -4.03990394e+00,  0.00000000e+00, -3.26685497e+00,\n",
+       "         0.00000000e+00,  2.29968883e+00,  1.12119508e-17,  4.62078211e-17,\n",
+       "        -4.62078211e-17]),\n",
+       " 'G': array([ 0.00000000e+00, -4.03990394e+00,  0.00000000e+00, -3.26685497e+00,\n",
+       "         0.00000000e+00,  2.29968883e+00,  1.12119508e-17,  4.62078211e-17,\n",
+       "        -4.62078211e-17]),\n",
+       " 'J_EE': array([[ 7.83373366e-17,  4.89600000e-01,  8.17124146e-18,\n",
+       "         -1.73600000e-01,  9.34363698e-17,  2.10400000e-01,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 8.80000000e-02,  1.95399252e-17,  8.80000000e-02,\n",
+       "          1.22124533e-18,  8.80000000e-02,  1.95399252e-17,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00, -8.80000000e-02,  0.00000000e+00,\n",
+       "          5.50000000e-03,  0.00000000e+00,  8.80000000e-02,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  1.00000000e+00,  0.00000000e+00,\n",
+       "         -1.00000000e+00,  0.00000000e+00, -1.00000000e+00,\n",
+       "         -4.44089210e-16,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 1.00000000e+00,  2.22044605e-16,  1.00000000e+00,\n",
+       "          2.22044605e-16,  1.00000000e+00,  2.22044605e-16,\n",
+       "         -1.00000000e+00,  0.00000000e+00,  0.00000000e+00]]),\n",
+       " 'dJ_EE': array([[0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       " 'pJ_EE': array([[ 3.13442259e-16,  3.78787879e+00, -7.01691435e-15,\n",
+       "          2.11288482e-16, -4.11325496e-16,  4.23305839e-16],\n",
+       "        [ 1.42857143e+00, -2.02405923e-15, -6.64935065e+00,\n",
+       "         -9.43907129e-26, -2.84571429e-01,  7.15936267e-16],\n",
+       "        [ 1.05599317e-16,  3.78787879e+00, -7.73830340e-15,\n",
+       "          2.11288482e-16, -6.12593947e-16, -6.54969629e-17],\n",
+       "        [-4.24369702e-16, -5.42013815e-15, -1.21212121e+01,\n",
+       "         -1.72259171e-25, -1.06666667e+00, -1.50312084e-16],\n",
+       "        [ 4.48537128e-16,  3.78787879e+00, -7.06494302e-15,\n",
+       "          2.11288482e-16, -6.24143804e-16,  2.30731772e-16],\n",
+       "        [ 1.42857143e+00, -1.29787101e-15,  5.47186147e+00,\n",
+       "          7.69958250e-26, -2.17904762e-01, -3.77125291e-16],\n",
+       "        [ 1.35065877e-15,  1.13636364e+01, -2.37654679e-14,\n",
+       "          5.26287720e-16, -1.82810668e-15, -1.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00]]),\n",
+       " 'R_EE': array([[ 7.07106781e-01,  7.07106781e-01,  0.00000000e+00],\n",
+       "        [ 7.07106781e-01, -7.07106781e-01, -4.44089210e-16],\n",
+       "        [-3.14018492e-16,  3.14018492e-16, -1.00000000e+00]]),\n",
+       " 'P_EE': array([ 8.80000000e-02, -7.83373366e-17,  8.22600000e-01])}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "model.update(np.zeros(9), np.zeros(9))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -143,7 +361,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -157,12 +375,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
