plane id is added in pybullet/FR3SIM

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,17 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Interface Running...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from FR3Py.interfaces import FR3Real\n",
     "robot = FR3Real()"
@@ -113,48 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'q': array([ 1.79421856e-04, -7.84231215e-01,  1.11477825e-04, -2.35669385e+00,\n",
-       "        -3.82987304e-04,  1.57002424e+00,  7.85281999e-01,  0.00000000e+00,\n",
-       "         0.00000000e+00]),\n",
-       " 'dq': array([-0.00071805, -0.0012983 ,  0.00073414, -0.00071696, -0.00098337,\n",
-       "        -0.00025528,  0.00199584,  0.        ,  0.        ]),\n",
-       " 'T': array([-1.58863410e-01, -4.12207699e+00, -7.86116481e-01,  2.30533581e+01,\n",
-       "         8.82920265e-01,  2.40247297e+00,  9.06659663e-03,  0.00000000e+00,\n",
-       "         0.00000000e+00])}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.readStates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     sleep(\u001b[39m0.001\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     robot\u001b[39m.\u001b[39msetCommand(np\u001b[39m.\u001b[39mzeros(\u001b[39m7\u001b[39m))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    sleep(0.001)\n",
@@ -163,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,20 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['q', 'dq', 'f(x)', 'g(x)', 'M(q)', 'M(q)^{-1}', 'nle', 'G', 'R_LINK3', 'P_LINK3', 'q_LINK3', 'J_LINK3', 'R_LINK4', 'P_LINK4', 'q_LINK4', 'J_LINK4', 'R_LINK5_1', 'P_LINK5_1', 'q_LINK5_1', 'J_LINK5_1', 'R_LINK5_2', 'P_LINK5_2', 'q_LINK5_2', 'J_LINK5_2', 'R_LINK6', 'P_LINK6', 'q_LINK6', 'J_LINK6', 'R_LINK7', 'P_LINK7', 'q_LINK7', 'J_LINK7', 'R_HAND', 'P_HAND', 'q_HAND', 'J_HAND', 'pJ_HAND', 'R_EE', 'P_EE', 'J_EE', 'dJ_EE', 'pJ_EE'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "model.getInfo(np.zeros(9), np.zeros(9)).keys()"
@@ -202,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,29 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.63755733e-16,  5.17805808e-01, -4.32283806e-16,  7.40400052e-01,\n",
-       "        4.68438541e-17, -6.55146123e-02,  2.41382408e-16,  5.00000000e-04,\n",
-       "        5.00000000e-04])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "controller.compute(np.zeros(9), np.zeros(9))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,91 +281,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.3.7'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "proxsuite.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: May 20 2022 19:44:17\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from FR3Py.bullte_envs.simple import SimpleEnv"
+    "from FR3Py.envs.pybullet import FR3Sim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "interface control mode is: velocity\n",
-      "startThreads creating 1 threads.\n",
-      "starting thread 0\n",
-      "started thread 0 \n",
-      "argc=2\n",
-      "argv[0] = --unused\n",
-      "argv[1] = --start_demo_name=Physics Server\n",
-      "ExampleBrowserThreadFunc started\n",
-      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
-      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
-      "Creating context\n",
-      "Created GL 3.3 context\n",
-      "Direct GLX rendering context obtained\n",
-      "Making context current\n",
-      "GL_VENDOR=Intel\n",
-      "GL_RENDERER=Mesa Intel(R) Graphics (RKL GT1)\n",
-      "GL_VERSION=4.6 (Core Profile) Mesa 21.2.6\n",
-      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
-      "pthread_getconcurrency()=0\n",
-      "Version = 4.6 (Core Profile) Mesa 21.2.6\n",
-      "Vendor = Intel\n",
-      "Renderer = Mesa Intel(R) Graphics (RKL GT1)\n",
-      "b3Printf: Selected demo: Physics Server\n",
-      "startThreads creating 1 threads.\n",
-      "starting thread 0\n",
-      "started thread 0 \n",
-      "MotionThreadFunc thread started\n",
-      "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
-      "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "env = SimpleEnv(render_mode='human')"
+    "env = FR3Sim(render_mode='human')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,6 +318,11 @@
     "    env.step(np.array([-0.8, 0,0,0,0,0,0,0,0]))\n",
     "    time.sleep(0.001)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
