Jacobian Pseudo Inverse Controller simulation added

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -254,68 +254,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "controller = WaypointController()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "controller.compute(np.zeros(9), np.zeros(9))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import proxsuite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proxsuite.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from FR3Py.envs.pybullet import FR3Sim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = FR3Sim(render_mode='human')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: May 20 2022 19:44:17\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interface control mode is: velocity\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "argc=2\n",
+      "argv[0] = --unused\n",
+      "argv[1] = --start_demo_name=Physics Server\n",
+      "ExampleBrowserThreadFunc started\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "Creating context\n",
+      "Created GL 3.3 context\n",
+      "Direct GLX rendering context obtained\n",
+      "Making context current\n",
+      "GL_VENDOR=Intel\n",
+      "GL_RENDERER=Mesa Intel(R) Graphics (RKL GT1)\n",
+      "GL_VERSION=4.6 (Core Profile) Mesa 21.2.6\n",
+      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
+      "pthread_getconcurrency()=0\n",
+      "Version = 4.6 (Core Profile) Mesa 21.2.6\n",
+      "Vendor = Intel\n",
+      "Renderer = Mesa Intel(R) Graphics (RKL GT1)\n",
+      "b3Printf: Selected demo: Physics Server\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "MotionThreadFunc thread started\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m q, dq \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mget_state()\n\u001b[1;32m     11\u001b[0m dq_cmd \u001b[39m=\u001b[39m controller\u001b[39m.\u001b[39mcompute(q, dq)\n\u001b[0;32m---> 12\u001b[0m env\u001b[39m.\u001b[39;49mstep(dq_cmd)\n\u001b[1;32m     13\u001b[0m time\u001b[39m.\u001b[39msleep(\u001b[39m0.001\u001b[39m)\n",
+      "File \u001b[0;32m~/manipulation/FR3Py/FR3Py/envs/pybullet.py:131\u001b[0m, in \u001b[0;36mFR3Sim.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action):\n\u001b[0;32m--> 131\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msend_joint_command(action)\n\u001b[1;32m    132\u001b[0m     p\u001b[39m.\u001b[39mstepSimulation()\n\u001b[1;32m    133\u001b[0m     q, dq \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_state()\n",
+      "File \u001b[0;32m~/manipulation/FR3Py/FR3Py/envs/pybullet.py:165\u001b[0m, in \u001b[0;36mFR3Sim.send_joint_command\u001b[0;34m(self, cmd)\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    163\u001b[0m     \u001b[39m# Run a PD with gravity compensation\u001b[39;00m\n\u001b[1;32m    164\u001b[0m     q, dq \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_state()\n\u001b[0;32m--> 165\u001b[0m     info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrobot\u001b[39m.\u001b[39;49mgetInfo(q, dq)\n\u001b[1;32m    166\u001b[0m     G \u001b[39m=\u001b[39m info[\u001b[39m\"\u001b[39m\u001b[39mG\u001b[39m\u001b[39m\"\u001b[39m][:, np\u001b[39m.\u001b[39mnewaxis]\n\u001b[1;32m    167\u001b[0m     \u001b[39m# compute torque command\u001b[39;00m\n",
+      "File \u001b[0;32m~/manipulation/FR3Py/FR3Py/controllers/utils.py:142\u001b[0m, in \u001b[0;36mRobotModel.getInfo\u001b[0;34m(self, q, dq)\u001b[0m\n\u001b[1;32m    134\u001b[0m p_link5_1, R_link5_1, q_LINK5_1 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompute_crude_location(\n\u001b[1;32m    135\u001b[0m     np\u001b[39m.\u001b[39meye(\u001b[39m3\u001b[39m), np\u001b[39m.\u001b[39marray(([\u001b[39m0.0\u001b[39m], [\u001b[39m0.0\u001b[39m], [\u001b[39m-\u001b[39m\u001b[39m0.26\u001b[39m])), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mFR3_LINK5_FRAME_ID\n\u001b[1;32m    136\u001b[0m )\n\u001b[1;32m    138\u001b[0m p_link5_2, R_link5_2, q_LINK5_2 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompute_crude_location(\n\u001b[1;32m    139\u001b[0m     np\u001b[39m.\u001b[39meye(\u001b[39m3\u001b[39m), np\u001b[39m.\u001b[39marray(([\u001b[39m0.0\u001b[39m], [\u001b[39m0.08\u001b[39m], [\u001b[39m-\u001b[39m\u001b[39m0.13\u001b[39m])), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mFR3_LINK5_FRAME_ID\n\u001b[1;32m    140\u001b[0m )\n\u001b[0;32m--> 142\u001b[0m p_link6, R_link6, q_LINK6 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompute_crude_location(\n\u001b[1;32m    143\u001b[0m     np\u001b[39m.\u001b[39;49meye(\u001b[39m3\u001b[39;49m), np\u001b[39m.\u001b[39;49marray(([\u001b[39m0.0\u001b[39;49m], [\u001b[39m0.0\u001b[39;49m], [\u001b[39m-\u001b[39;49m\u001b[39m0.03\u001b[39;49m])), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mFR3_LINK6_FRAME_ID\n\u001b[1;32m    144\u001b[0m )\n\u001b[1;32m    146\u001b[0m p_link7, R_link7, q_LINK7 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompute_crude_location(\n\u001b[1;32m    147\u001b[0m     np\u001b[39m.\u001b[39meye(\u001b[39m3\u001b[39m), np\u001b[39m.\u001b[39marray(([\u001b[39m0.0\u001b[39m], [\u001b[39m0.0\u001b[39m], [\u001b[39m0.01\u001b[39m])), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mFR3_LINK7_FRAME_ID\n\u001b[1;32m    148\u001b[0m )\n\u001b[1;32m    150\u001b[0m p_hand, R_hand, q_HAND \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompute_crude_location(\n\u001b[1;32m    151\u001b[0m     np\u001b[39m.\u001b[39meye(\u001b[39m3\u001b[39m), np\u001b[39m.\u001b[39marray(([\u001b[39m0.0\u001b[39m], [\u001b[39m0.0\u001b[39m], [\u001b[39m0.06\u001b[39m])), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mFR3_HAND_FRAME_ID\n\u001b[1;32m    152\u001b[0m )\n",
+      "File \u001b[0;32m~/manipulation/FR3Py/FR3Py/controllers/utils.py:62\u001b[0m, in \u001b[0;36mRobotModel.compute_crude_location\u001b[0;34m(self, R_offset, p_offset, frame_id)\u001b[0m\n\u001b[1;32m     59\u001b[0m Rot \u001b[39m=\u001b[39m T_mat[:\u001b[39m3\u001b[39m, :\u001b[39m3\u001b[39m]\n\u001b[1;32m     61\u001b[0m \u001b[39m# quaternion\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m q \u001b[39m=\u001b[39m Rotation\u001b[39m.\u001b[39;49mfrom_matrix(Rot)\u001b[39m.\u001b[39;49mas_quat()\n\u001b[1;32m     64\u001b[0m \u001b[39mreturn\u001b[39;00m p, Rot, q\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
+    "from FR3Py.controllers.waypoint_controller import WaypointController\n",
+    "from FR3Py.envs.pybullet import FR3Sim\n",
+    "\n",
+    "env = FR3Sim(render_mode='human', mode='velocity')\n",
+    "env.reset()\n",
+    "controller = WaypointController()\n",
     "while True:\n",
-    "    env.step(np.array([-0.8, 0,0,0,0,0,0,0,0]))\n",
+    "    q, dq = env.get_state()\n",
+    "    dq_cmd = controller.compute(q, dq)\n",
+    "    env.step(dq_cmd)\n",
     "    time.sleep(0.001)"
    ]
   },
