--- a/examples/jacobian_pseudo_inv_controller .ipynb
+++ b/examples/jacobian_pseudo_inv_controller .ipynb
@@ -21,7 +21,63 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: May 20 2022 19:44:17\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interface control mode is: velocity\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "argc=2\n",
+      "argv[0] = --unused\n",
+      "argv[1] = --start_demo_name=Physics Server\n",
+      "ExampleBrowserThreadFunc started\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "Creating context\n",
+      "Created GL 3.3 context\n",
+      "Direct GLX rendering context obtained\n",
+      "Making context current\n",
+      "GL_VENDOR=Intel\n",
+      "GL_RENDERER=Mesa Intel(R) Graphics (RKL GT1)\n",
+      "GL_VERSION=4.6 (Core Profile) Mesa 21.2.6\n",
+      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
+      "pthread_getconcurrency()=0\n",
+      "Version = 4.6 (Core Profile) Mesa 21.2.6\n",
+      "Vendor = Intel\n",
+      "Renderer = Mesa Intel(R) Graphics (RKL GT1)\n",
+      "b3Printf: Selected demo: Physics Server\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "MotionThreadFunc thread started\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m dq_cmd \u001b[39m=\u001b[39m controller\u001b[39m.\u001b[39mcompute(q, dq)\n\u001b[1;32m     12\u001b[0m robot\u001b[39m.\u001b[39mstep(dq_cmd)\n\u001b[0;32m---> 13\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m1\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m1000\u001b[39;49m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -30,7 +86,7 @@
     "\n",
     "robot = FR3Sim(render_mode='human', mode='velocity', Ts=1/1000)\n",
     "robot.reset()\n",
-    "controller = WaypointController()\n",
+    "controller = WaypointController(kp=2)\n",
     "while True:\n",
     "    q, dq = robot.get_state()\n",
     "    dq_cmd = controller.compute(q, dq)\n",
