--- a/examples/jacobian_pseudo_inv_controller .ipynb
+++ b/examples/jacobian_pseudo_inv_controller .ipynb
@@ -19,65 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: May 20 2022 19:44:17\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "interface control mode is: velocity\n",
-      "startThreads creating 1 threads.\n",
-      "starting thread 0\n",
-      "started thread 0 \n",
-      "argc=2\n",
-      "argv[0] = --unused\n",
-      "argv[1] = --start_demo_name=Physics Server\n",
-      "ExampleBrowserThreadFunc started\n",
-      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
-      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
-      "Creating context\n",
-      "Created GL 3.3 context\n",
-      "Direct GLX rendering context obtained\n",
-      "Making context current\n",
-      "GL_VENDOR=Intel\n",
-      "GL_RENDERER=Mesa Intel(R) Graphics (RKL GT1)\n",
-      "GL_VERSION=4.6 (Core Profile) Mesa 21.2.6\n",
-      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
-      "pthread_getconcurrency()=0\n",
-      "Version = 4.6 (Core Profile) Mesa 21.2.6\n",
-      "Vendor = Intel\n",
-      "Renderer = Mesa Intel(R) Graphics (RKL GT1)\n",
-      "b3Printf: Selected demo: Physics Server\n",
-      "startThreads creating 1 threads.\n",
-      "starting thread 0\n",
-      "started thread 0 \n",
-      "MotionThreadFunc thread started\n",
-      "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n",
-      "ven = Intel\n",
-      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m dq_cmd \u001b[39m=\u001b[39m controller\u001b[39m.\u001b[39mcompute(q, dq)\n\u001b[1;32m     12\u001b[0m robot\u001b[39m.\u001b[39mstep(dq_cmd)\n\u001b[0;32m---> 13\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m1\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m1000\u001b[39;49m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -92,6 +36,47 @@
     "    dq_cmd = controller.compute(q, dq)\n",
     "    robot.step(dq_cmd)\n",
     "    time.sleep(1/1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interface Running...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from FR3Py.interfaces import FR3Real\n",
+    "robot = FR3Real()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[69], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.01\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     robot\u001b[39m.\u001b[39msend_joint_command(np\u001b[39m.\u001b[39marray([\u001b[39m0.1\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m]))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    time.sleep(0.01)\n",
+    "    robot.send_joint_command(np.array([0.1,0,0,0,0,0,0]))"
    ]
   },
   {
